# stipp

./: .clang-tidy  LICENSE  README.md  stipp.hpp
.github/workflows/: ci.yaml
tests/: CMakeLists.txt  tests.cpp
tests/cmake/: format.cmake  lints.cmake  settings.cmake  warnings.cmake
